tests/ui/never_type/impl_trait_fallback3.stderr
error[E0277]: the trait bound `(): T` is not satisfied
  --> $DIR/impl_trait_fallback3.rs:11:11
   |
LL | fn a() -> Foo {
   |           ^^^ the trait `T` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/impl_trait_fallback3.rs:5:1
   |
LL | trait T {
   | ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
